fixes for Java 8 compatibility